--- a/app/src/main/res/values-land/dimes.xml
+++ b/app/src/main/res/values-land/dimes.xml
@@ -6,5 +6,5 @@
   -->
 
 <resources>
-    <string name="app_name">FlicksProject</string>
+    <dimen name="list_item_image_height">150dp</dimen>
 </resources>
