--- a/app/src/main/res/drawable/line_divider.xml
+++ b/app/src/main/res/drawable/line_divider.xml
@@ -5,7 +5,12 @@
   ~ Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
   -->
 
-<resources>
-    <dimen name="list_item_image_height">150dp</dimen>
-    <dimen name="list_video_icon_image_height">30dp</dimen>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <size
+        android:width="1dp"
+        android:height="1dp" />
+
+    <solid android:color="@android:color/darker_gray" />
+</shape>
