--- a/app/src/main/res/layout/item_movie_2.xml
+++ b/app/src/main/res/layout/item_movie_2.xml
@@ -5,12 +5,11 @@
   ~ Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
-    android:orientation="horizontal"
     android:padding="@dimen/activity_padding">
 
     <ImageView
@@ -20,4 +19,13 @@
         android:contentDescription="@string/app_name"
         android:scaleType="fitXY"
         tools:src="@drawable/image_placeholder" />
-</LinearLayout>
+
+    <ImageView
+        android:id="@+id/listItemIvPlayButton"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/list_video_icon_image_height"
+        android:layout_centerInParent="true"
+        android:background="?android:attr/selectableItemBackground"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/play_button" />
+</RelativeLayout>
