--- a/app/src/main/res/layout/item_movie_2.xml
+++ b/app/src/main/res/layout/item_movie_2.xml
@@ -22,7 +22,7 @@
 
     <ImageView
         android:id="@+id/listItemIvPlayButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/list_video_icon_image_height"
         android:layout_centerInParent="true"
         android:background="?android:attr/selectableItemBackground"
