--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,10 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
+    <!-- TextTemplate -->
+    <style name="TextTemplate">
+        <item name="android:textSize">@dimen/text_small</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 </resources>
