--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,13 +21,14 @@
 
     <TextView
         android:id="@+id/tvEmptyList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_centerVertical="true"
         android:text="@string/text_empty_list"
-        android:textColor="@android:color/holo_red_light" />
+        android:textAllCaps="true"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="@dimen/text_large"
+        android:textStyle="bold" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/sRLMovies"
