--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -14,7 +14,7 @@
     <RelativeLayout
         android:id="@+id/activity_details"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="@dimen/activity_horizontal_margin"
         tools:context=".activities.DetailsActivity">
 
@@ -64,6 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/detailsTxReleaseDateTitle"
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:isIndicator="true"
             android:numStars="5"
             android:saveEnabled="false" />
 
