--- a/app/src/main/res/values-land/dimes.xml
+++ b/app/src/main/res/values-land/dimes.xml
@@ -7,5 +7,6 @@
 
 <resources>
     <dimen name="list_item_image_height">180dp</dimen>
+    <dimen name="list_item_web_view_height">180dp</dimen>
     <dimen name="list_video_icon_image_height">60dp</dimen>
 </resources>
